--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "istvan0304/ck-image-manager",
+    "name": "istvan0304/imagemanager",
     "description": "Image manager for ck editor",
     "type": "yii2-extension",
     "license": "MIT",
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "istvan0304\\ckImageManager\\": ""
+            "istvan0304\\imagemanager\\": ""
         }
     }
 }
